# ml-diabetes-detection

./: .dockerignore  .env.example  .gitignore  Diabetes.ipynb  Dockerfile  Dockerfile.dev  GA_train.ipynb  LICENSE  README.md  docker-compose.yml  nb_example.ipynb  pedrict-model.ipynb  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  script.txt
api/: .pylintrc  __main__.py  pyproject.toml
api/__tests__/unit/services/: test_diagnostic_service.py
api/__tests__/unit/services/llm_services/: __init__.py  test_ollama_llm_service.py  test_openai_llm_service.py
api/application/dto/: diabetes_prediction.py
api/application/enum/: education_level.py  income_level.py  llm_model.py
api/application/services/: diagnostic_service.py  llm_service.py
api/infra/config/: env.py
api/infra/container/: dependecies.py
api/infra/models/model_optimized/: diabetes_model_optimized.joblib  diabetes_model_optimized.pkl  model_metadata.json
api/infra/services/: diagnostic_service.py
api/infra/services/llm_services/: ollama_llm_service.py  openai_llm_service.py
api/infra/services/predict_services/: diabetes_prediction_service.py
api/infra/utils/: data_formatter.py  prompt_builder.py
api/infra/web/: app.py
api/infra/web/routes/: __init__.py  diagnostic_route.py  health_route.py
diabetes_model/: model_metadata.json
jupyter/tech-challenger-1/: Diabetes.ipynb
jupyter/tech-challenger-2/: GA_train.ipynb
